# telemetry-solution

./: .gitattributes  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  LICENSE.md  README.md  RELEASE_NOTES.md
benchmarks/sysstress/contention_test/: CMakeLists.txt  bm_lock.cc  getopt.c  getopt.h  work.asm  work.s
benchmarks/sysstress/mem_bw_test/: CMakeLists.txt
benchmarks/sysstress/slc_bw_test/: CMakeLists.txt
tools/spe_parser/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
tools/spe_parser/LICENSES/: ARROW_LICENSE
tools/spe_parser/spe_parser/: __init__.py  errors.py  parser.py  payload.py  perf_decoder.py  schema.py  spe_decoder.py  symbols.py  testutils.py
tools/spe_parser/tests/: __init__.py
tools/spe_parser/tests/e2e/: test_parser.py
tools/spe_parser/tests/testdata/: data.json  perf.data  perf.raw  spe-b1-ts0.csv  spe-b1-ts0.data  spe-b1-ts1.csv  spe-b1-ts1.data  spe-br.parquet  spe-ldst.parquet  spe-other.parquet
tools/spe_parser/tests/unit/: __init__.py  test_payload.py  test_perf_decoder.py  test_spe_decoder.py  test_symbol.py
tools/topdown_tool/: .codespell-ignore-words.txt  .gitignore  .pre-commit-config.yaml  .pylintrc  README.CMN.md  README.CPU.md  README.md  conftest.py  cpu_mapping.py  event_collection.py  metric_data.py  pyproject.toml  setup.cfg  simple_maths.py  stat.py  topdown-tool  tox.ini
tools/topdown_tool/contrib/workload_automation/: README.md
tools/topdown_tool/metrics/: neoverse-n1.json  neoverse-v1.json
tools/topdown_tool/scripts/pre-commit/: check_branding_name.sh
tools/topdown_tool/tests/: test_cpu_mapping.py  test_event_collection.py  test_main.py  test_metric_data.py  test_public_api.py  test_simple_maths.py
tools/topdown_tool/tests/cmn_probe/: __init__.py  test_cmn.py  test_cmn_database.py  test_cmn_database_extra.py  test_cmn_factory.py  test_cmn_model.py  test_cmn_probe_unit.py  test_cmn_scheduler.py  test_constraints_helpers.py  test_ggroupx_unit.py  test_multi_cmn_scheduler.py  test_occupid.py  test_watchpoint_basic.py  test_windows_perf_parser.py
tools/topdown_tool/tests/cmn_probe/database_out/: cmn_topology_1.txt  get_collectable_base_metrics_for_topdown_group_1.txt  get_collectable_groups_1.txt  get_collectable_metrics_1.txt  get_collectable_topdown_metrics_1.txt  get_coordinates_2.txt  get_dev_id_field_1.txt  get_dev_id_field_2.txt  get_devices_1.txt  get_devices_2.txt  get_group_title_1.txt  get_group_title_10.txt  get_group_title_11.txt  get_group_title_12.txt  get_group_title_2.txt  get_group_title_3.txt  get_group_title_4.txt  get_group_title_5.txt  get_group_title_6.txt  get_group_title_7.txt  get_group_title_8.txt  get_group_title_9.txt  get_json_events_1.txt  get_json_groups_1.txt  get_json_groups_2.txt  get_json_metrics_1.txt  get_json_metrics_2.txt  get_json_topdown_groups_1.txt  get_json_topdown_metrics_1.txt  get_json_watchpoints_1.txt  get_json_watchpoints_2.txt  get_metric_details_1.txt  get_metric_details_10.txt  get_metric_details_11.txt  get_metric_details_12.txt  get_metric_details_2.txt  get_metric_details_3.txt  get_metric_details_4.txt  get_metric_details_5.txt  get_metric_details_6.txt  (+69 more)
tools/topdown_tool/tests/cmn_probe/fixtures/: cmn-700.json  topology.json
tools/topdown_tool/tests/cmn_probe/helpers/: __init__.py
tools/topdown_tool/tests/cmn_probe/stdout/: cmn_list.txt  cmn_list_devices.txt  cmn_list_events.txt  cmn_list_groups.txt  cmn_list_metrics.txt  events__collect_by_metric.csv  events__collect_by_metric__ccg_la_effectiveness__hns_analysis_rate__rnf_chi_egress_traffic__ccg_req_opcode_mix.csv  events__collect_by_metric__ccg_la_effectiveness__hns_analysis_rate__rnf_chi_egress_traffic__ccg_req_opcode_mix__capture_per_device_id.csv  events__collect_by_metric__hns_req_opcode_mix__rni_chi_egress_traffic.csv  events__collect_by_metric__rnd_chi_egress_traffic__ccg_ra_trk_effectiveness__ccg_ha_trk_effectiveness__capture_per_device_id.csv  events__collect_by_none.csv  events__collect_by_none__hni_axi_egress_traffic.csv  metrics_0__collect_by_metric.csv  (+39 more)
tools/topdown_tool/tests/common/: test_cli_version.py  test_common.py  test_simple_maths.py  test_version.py
tools/topdown_tool/tests/cpu_probe/: conftest.py  test_cpu_cli_renderer.py  test_cpu_csv_renderer.py  test_cpu_detector.py  test_cpu_factory.py  test_cpu_model.py  test_cpu_probe.py  test_cpu_probe_compute_aggregate.py  test_cpu_probe_compute_metrics.py  test_cpu_telemetry_database.py
tools/topdown_tool/tests/perf/: conftest.py  test_event_scheduler.py  test_perf_factory.py  test_remote_linux_target.py  test_windows_integration.py
tools/topdown_tool/tests/workload/: test_command_workload.py
tools/topdown_tool/topdown_tool/: __init__.py  __main__.py  build_info.py  cpu_mapping.py  event_collection.py  metric_data.py  simple_maths.py  utils.py  version.py
tools/topdown_tool/topdown_tool/cmn_probe/: __init__.py  cmn_database.py  cmn_factory.py  cmn_model.py  cmn_probe.py  common.py  multi_cmn_scheduler.py  scheduler.py  windows_perf_parser.py
tools/topdown_tool/topdown_tool/common/: __init__.py  abstractions.py  devlib_types.py  remote_target_manager.py  remote_utils.py  simple_maths.py  win32.py
tools/topdown_tool/topdown_tool/cpu_probe/: __init__.py  common.py  cpu_cli_renderer.py  cpu_csv_renderer.py  cpu_detector.py  cpu_factory.py  cpu_model.py  cpu_probe.py  cpu_telemetry_database.py  windows_perf_parser.py
tools/topdown_tool/topdown_tool/layout/: __init__.py  layout.py
tools/topdown_tool/topdown_tool/metrics/: mapping.json  neoverse-n1.json  neoverse-n2.json  neoverse-n3.json  neoverse-v1.json  neoverse-v2.json
tools/topdown_tool/topdown_tool/perf/: __init__.py  event_scheduler.py  linux_perf.py  linux_perf_base.py  perf.py  perf_factory.py  remote_linux_perf.py  windows_coordinator.py  windows_perf.py  windows_perf_parser.py  wperf_artifact_handler.py
tools/topdown_tool/topdown_tool/probe/: __init__.py  probe.py
tools/topdown_tool/topdown_tool/workload/: __init__.py  command_workload.py  pid_workload.py  systemwide_workload.py  workload.py
(+200 files in other folders)
