# SPDX-License-Identifier: Apache-2.0
#
# Copyright (C) Arm Ltd. 2023

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.12.2", "hatch-vcs>=0.3"]

[project]
name = "spe-parser"
dynamic = ["version"]
description = "spe-parser can parse SPE metrics from perf records."
readme.file = "README.md"
readme.content-type = "text/markdown"
keywords = ["Arm", "SPE", "perf"]
license = "Apache-2.0"
requires-python = ">=3.8"
dependencies = [
  "pyarrow>=11.0.0",
  "pandas>=1.3.5",
  "construct==2.10.68",
  "requests>=2.28.2"
]
optional-dependencies.testing = [
  "deepdiff==6.2.3",
  "coverage==5.5",
  "pytest==7.1.3",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.scripts]
spe-parser="spe_parser.parser:main"

[tool.setuptools.dynamic]
version = {attr = "spe_parser.__version__"}

[tool.hatch.version]
path = "spe_parser/__init__.py"
