# SPDX-License-Identifier: Apache-2.0
# Copyright 2022-2023 Arm Limited

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "topdown-tool"
version = "0.1.0"
authors = [
  {name = "Vincent Coubard", email = "vincent.coubard@arm.com"},
  {name = "Adam Zenker", email = "adam.zenker@arm.com"}
]
description = "Utility to collect topdown performance analysis metrics for Arm Neoverse CPUs."
readme = "README.md"
keywords = ["Arm", "perf", "topdown", "metrics"]
license = "Apache-2.0"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3"
]
dependencies = ["rich==14.1.0", "pydantic==2.11.7", "jsonschema==4.25.1"]

[project.optional-dependencies]
test = ["pytest==8.4.1", "tox==4.28.4", "pytest-mock==3.14.1"]
lint = ["flake8==7.3.0", "mypy==1.17.1", "pylint==3.3.7"]

[project.urls]
"Source code" = "https://gitlab.arm.com/telemetry-solution/telemetry-solution"

[project.scripts]
topdown-tool = "topdown_tool.__main__:main"

[project.entry-points."topdown_tool.probe_factories"]
cpu_probe_factory = "topdown_tool.cpu_probe.cpu_factory:CpuProbeFactory"

[tool.hatch.build]
include = [
  "topdown_tool/**/*.py",
  "topdown_tool/cpu_probe/metrics/*.json",
  "topdown_tool/cpu_probe/schemas/*.json"
]

[tool.mypy]
exclude = ["^\\.venv/.*", "^venv", "pmu_discovery", "^tests/"]
check_untyped_defs = true
disallow_untyped_defs = true

[tool.pylint]
good-names = ["e", "f", "g", "m", "l1", "l2", "mi", "op"]
generated-member = ["argparse._ArgumentGroup.add_linux_argument"]
disable = [
  "cell-var-from-loop",
  "line-too-long",
  "missing-function-docstring",
  "missing-class-docstring",
  "missing-module-docstring",
  "too-few-public-methods",
  "too-many-instance-attributes",
  "wrong-import-position",
  "fixme"
]

[tool.isort]
line_length = 100

[tool.black]
line_length = 100
