# SPDX-License-Identifier: Apache-2.0
# Copyright 2022-2026 Arm Limited

[build-system]
requires = [
  "setuptools>=68",
  "tomli; python_version < \"3.11\"",
]
build-backend = "setuptools.build_meta"

[project]
name = "topdown-tool"
# Versioning summary:
# - This static field is the source of truth for release versioning.
# - BuildPyWithBuildInfo stamps _version.py/_build_info.py from this value during sdist/wheel builds.
# - Runtime may enrich missing branch/SHA from git (set TOPDOWN_TOOL_SKIP_GIT_FALLBACK=1 to disable).
# - Release bump: update this value, then rebuild artifacts.
version = "1.0.0"
authors = [
  {name = "Vincent Coubard", email = "vincent.coubard@arm.com"},
  {name = "Adam Zenker", email = "adam.zenker@arm.com"}
]
description = "Utility to collect topdown performance analysis metrics for Arm Neoverse CPUs."
readme = "README.md"
keywords = ["Arm", "perf", "topdown", "metrics"]
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3"
]
dependencies = ["rich==14.1.0", "pydantic==2.11.7", "jsonschema==4.25.1"]

[project.optional-dependencies]
test = [
  "pytest==8.4.1",
  "tox==4.28.4",
  "pytest-mock==3.14.1"
]
lint = [
  "flake8==7.3.0",
  "mypy==1.17.1",
  "pylint==3.3.7"
]
remote = [
  "devlib @ git+https://gitlab.arm.com/tooling/workload-automation/devlib.git"
]

[project.urls]
"Source code" = "https://gitlab.arm.com/telemetry-solution/telemetry-solution"

[project.scripts]
topdown-tool = "topdown_tool.__main__:main"
validate-cpu-spec = "topdown_tool.cpu_probe.cpu_model:main"

[project.entry-points."topdown_tool.probe_factories"]
cpu_probe_factory = "topdown_tool.cpu_probe.cpu_factory:CpuProbeFactory"

[tool.setuptools.packages.find]
include = ["topdown_tool*"]

[tool.setuptools.package-data]
topdown_tool = [
  "cpu_probe/metrics/*.json",
  "cpu_probe/schemas/*.json",
]

[tool.setuptools.cmdclass]
build_py = "topdown_tool.build_info.BuildPyWithBuildInfo"
editable_wheel = "topdown_tool.build_info.EditableWheelWithBuildInfo"


[tool.mypy]
python_version = "3.10"
exclude = ["^\\.venv/.*", "^venv", "pmu_discovery", "^tests/"]
check_untyped_defs = true
disallow_untyped_defs = true

[tool.pylint]
good-names = ["e", "f", "g", "m", "l1", "l2", "mi", "op"]
generated-member = ["argparse._ArgumentGroup.add_linux_argument"]
disable = [
  "cell-var-from-loop",
  "line-too-long",
  "missing-function-docstring",
  "missing-class-docstring",
  "missing-module-docstring",
  "too-few-public-methods",
  "too-many-instance-attributes",
  "wrong-import-position",
  "fixme"
]

[tool.isort]
line_length = 100

[tool.black]
line_length = 100
